2021-05-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClrange.c:
	  Improve handling of register parameters.
	* src/stm8/gen.c:
	  Improve code generation for shift by slightly-less-than-a-multiple-of-8.
	* src/z80/gen.c,
	  src/z80/ralloc.c:
	  Increase some regalloc_dry_run_cost penalties to avoid invalid allocation even when all alternatives result in expensive spilling.

2021-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/gen.c:
	  Fixes for register parameter in a, l or hl.

2021-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/gen.h,
	  src/stm8/main.c:
	  Infrastructure for register parameters.
	* src/SDCCast.c:
	  Fix register parameters for printf->puts optimization.
	* src/z80/peep.c:
	  Fix bug #3234.

2021-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/gen.h,
	  src/z80/main.c,
	  src/z80/peep.c:
	  Infrastructure for non-__z88dk_fastcall register arguments.
	* src/stm8/gen.c:
	  Fix bug #3233.
	* src/SDCCast.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h:
	  Fix handling of register parameters of not-really-builtin memcpy.

2021-05-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/*/main.c:
	  Make restriction on register parameters for vararg functions port-specific.

2021-05-11 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/tests/bug-3231.c:
	  Disable __critical test for host.

2021-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Put all the documentation required by Annex J.3, "Implementation-defined behaviour", of the C standard in one place.

2021-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/stm8/gen.c:
	  Improve stack adjustment.

2021-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/loop.c,
	  support/regression/tests/gcc-torture-execute-20010409-1.c:
	  Disable tests that rely on asm-implemented longjmp.
